# Bible-Geocoding-Data

./: pyproject.toml  pyproject.toml~
geocoding/: Reader.py
