[tool.poetry]
name = "geocoding"
version = "0.1.0"
description = ""
authors = ["Stephen Smith, OpenBible.info"]
license = "CC BY 4.0"
readme = "README.md"
packages = [
  {include = "geocoding"},
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
black = "^23.3.0"
jsonlines = "^3.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
